# tensorexperiments

./: .gitignore  .python-version  README.md  pyproject.toml
tensorexperiments/: tf.py  torch.py
