[tool.poetry]
name = "tensorexperiments"
version = "0.1.0"
description = "PyTorch environment setup with Pyenv and Poetry for Macbook Air M1 with ARM-64 architecture"
authors = ["Alex Watson <alexfromapex@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
typing-extensions = "*"
torch = { url = "https://download.pytorch.org/whl/nightly/cpu/torch-1.13.0.dev20220523-cp38-none-macosx_11_0_arm64.whl", platform = "darwin", markers = "platform_machine == 'arm64'" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
torch = 'tensorexperiments.torch:main'
